# Minamo

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
common/: build.gradle.kts
common/src/commonMain/kotlin/xyz/quaver/subsampledimage/common/: App.kt
common/src/desktopMain/kotlin/xyz/quaver/subsampledimage/common/: DesktopApp.kt  platform.kt
desktop/: build.gradle.kts
desktop/src/jvmMain/kotlin/: Main.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
minamo/: build.gradle.kts
minamo-aqua/: build.gradle.kts
minamo-aqua/src/androidMain/: AndroidManifest.xml
minamo-aqua/src/androidMain/kotlin/: MinamoImageView.kt
minamo-aqua/src/androidMain/kotlin/xyz/quaver/minamo/aqua/: MinamoImageView.kt
minamo-aqua/src/commonMain/kotlin/xyz/quaver/minamo/aqua/: Bound.kt  Rect.kt  ScaleType.kt  Tile.kt
minamo-aqua/src/desktopMain/kotlin/xyz/quaver/minamo/aqua/: MinamoImageCanvas.kt  MinamoImagePanel.kt
minamo/src/androidMain/: AndroidManifest.xml
minamo/src/androidMain/kotlin/xyz/quaver/minamo/: Image.kt  ImageSource.kt  factory.kt
minamo/src/commonMain/kotlin/xyz/quaver/minamo/: Image.kt  ImageSource.kt  MinamoException.kt  VipsKernel.kt
minamo/src/desktopMain/kotlin/xyz/quaver/minamo/: Image.kt  ImageSource.kt  factory.kt
native/: .gitignore  CMakeLists.txt  build-native.sh  build-ndk.sh  build-windows.sh  create-ndk-link.sh  fake-pkg-config
native/ .vscode/: c_cpp_properties.json
native/cmake/: dav1d.cmake  de265.cmake  exif.cmake  expat.cmake  ffi.cmake  fftw.cmake  glib.cmake  heif.cmake  highway.cmake  iconv.cmake  jpeg-turbo.cmake  jxl.cmake  libvips.cmake  minamo.cmake  mozjpeg.cmake  pcre2.cmake  spng.cmake  ssi.cmake  test.cmake  tiff.cmake  vips.cmake  webp.cmake  zlib.cmake
native/src/: CMakeLists.txt  arch.c  arch.h  minamo.h  minamo_aqua.c  minamo_image.c  minamo_image.h  minamo_sink_callback.c  minamo_sink_callback.h  ssi.c  ssi.h  ssi_jni.c  ssi_jni.h  vipsimage.c
native/src/android/: test.c
native/src/imagesource/: descriptor.c  file.c
native/src/jni/: fileimagesource.c  vipsimage.c
native/test/: CMakeLists.txt  image.avif  test.c  test_jpg.c
sample/: build.gradle  build.gradle.kts
sample/android/: build.gradle.kts
sample/android/src/main/java/xyz/quaver/subsampledimage/android/: MainActivity.kt
sample/desktop/: build.gradle.kts
sample/desktop/src/jvmMain/kotlin/: Main.kt
sample/release/: output-metadata.json
sample/src/androidMain/: AndroidManifest.xml
sample/src/androidMain/kotlin/xyz/quaver/minamo/sample/: MainActivity.kt
sample/src/androidTest/java/xyz/quaver/graphics/subsampledimage/sample/: ExampleInstrumentedTest.kt
sample/src/desktopMain/kotlin/: main.kt
sample/src/main/: AndroidManifest.xml
sample/src/main/java/xyz/quaver/graphics/subsampledimage/sample/: MainActivity.kt
sample/src/main/java/xyz/quaver/graphics/subsampledimage/sample/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
sample/src/main/res/drawable/: ic_launcher_background.xml
sample/src/main/res/drawable-v24/: ic_launcher_foreground.xml
sample/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
sample/src/main/res/values/: colors.xml  strings.xml  themes.xml
sample/src/main/res/values-night/: themes.xml
sample/src/test/java/xyz/quaver/graphics/subsampledimage/sample/: ExampleUnitTest.kt
